--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,7 +1,7 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{structbulsto}{bulsto} \\*A Bulirsch-\/\+Stoer integrator }{\pageref{structbulsto}}{}
-\item\contentsline{section}{\hyperlink{structfunction__table}{function\+\_\+table} \\*Stores system properties for easy access }{\pageref{structfunction__table}}{}
-\item\contentsline{section}{\hyperlink{structfweuler}{fweuler} \\*A forward-\/\+Euler integrator }{\pageref{structfweuler}}{}
-\item\contentsline{section}{\hyperlink{structrk4}{rk4} \\*A classical (4th-\/order) Runge-\/\+Kutta integrator }{\pageref{structrk4}}{}
+\item\contentsline{section}{\hyperlink{structbulsto}{bulsto} }{\pageref{structbulsto}}{}
+\item\contentsline{section}{\hyperlink{structfunction__table}{function\+\_\+table} }{\pageref{structfunction__table}}{}
+\item\contentsline{section}{\hyperlink{structfweuler}{fweuler} }{\pageref{structfweuler}}{}
+\item\contentsline{section}{\hyperlink{structrk4}{rk4} }{\pageref{structrk4}}{}
 \end{DoxyCompactList}
