--- a/latex/eoms_8h.tex
+++ b/latex/eoms_8h.tex
@@ -4,55 +4,41 @@
 \begin{DoxyCompactItemize}
 \item 
 struct \hyperlink{structfunction__table}{function\+\_\+table}
-\begin{DoxyCompactList}\small\item\em Stores system properties for easy access. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \subsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}{}typedef double $\ast$($\ast$ \hyperlink{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}{func\+\_\+ptr}) (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}
-
-\begin{DoxyCompactList}\small\item\em Pointer type for O\+D\+E functions. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a0be2960cb454fad0133ab991dcb4f99d}{}typedef struct \hyperlink{structfunction__table}{function\+\_\+table} \hyperlink{eoms_8h_a0be2960cb454fad0133ab991dcb4f99d}{function\+\_\+table}\label{eoms_8h_a0be2960cb454fad0133ab991dcb4f99d}
-
-\begin{DoxyCompactList}\small\item\em Stores system properties for easy access. \end{DoxyCompactList}\end{DoxyCompactItemize}
+typedef double $\ast$($\ast$ \hyperlink{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}{func\+\_\+ptr}) (double, double\mbox{[}$\,$\mbox{]})
+\item 
+typedef struct \hyperlink{structfunction__table}{function\+\_\+table} \hyperlink{eoms_8h_a0be2960cb454fad0133ab991dcb4f99d}{function\+\_\+table}
+\end{DoxyCompactItemize}
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{eoms_8h_aa7e56647473fda6713f2859204825fa9}{}double $\ast$ \hyperlink{eoms_8h_aa7e56647473fda6713f2859204825fa9}{brusselator} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_aa7e56647473fda6713f2859204825fa9}
-
-\begin{DoxyCompactList}\small\item\em The Brusselator. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_aa35dd3618c4aea400807300f6f527215}{}double $\ast$ \hyperlink{eoms_8h_aa35dd3618c4aea400807300f6f527215}{chen} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_aa35dd3618c4aea400807300f6f527215}
-
-\begin{DoxyCompactList}\small\item\em The Chen system. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a11e6e9f88db3a9e534b7e08afdca9dae}{}double $\ast$ \hyperlink{eoms_8h_a11e6e9f88db3a9e534b7e08afdca9dae}{damped\+\_\+spring} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_a11e6e9f88db3a9e534b7e08afdca9dae}
-
-\begin{DoxyCompactList}\small\item\em The damped spring. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_aef740a9635dace724ad6e69dde2b404a}{}double $\ast$ \hyperlink{eoms_8h_aef740a9635dace724ad6e69dde2b404a}{double\+\_\+pendulum} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_aef740a9635dace724ad6e69dde2b404a}
-
-\begin{DoxyCompactList}\small\item\em The double pendulum. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a6b2d0a6fc0ea58412e5d3cfa962bc6bb}{}double $\ast$ \hyperlink{eoms_8h_a6b2d0a6fc0ea58412e5d3cfa962bc6bb}{duffing} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_a6b2d0a6fc0ea58412e5d3cfa962bc6bb}
-
-\begin{DoxyCompactList}\small\item\em The Duffing equation. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_ac64c39c0ef127e0c41dc58fc6a5c7466}{}double $\ast$ \hyperlink{eoms_8h_ac64c39c0ef127e0c41dc58fc6a5c7466}{lorenz} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_ac64c39c0ef127e0c41dc58fc6a5c7466}
-
-\begin{DoxyCompactList}\small\item\em The Lorenz system. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_ac2717c6b5207b7ad8c3ffbd9db16397e}{}double $\ast$ \hyperlink{eoms_8h_ac2717c6b5207b7ad8c3ffbd9db16397e}{lotka} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_ac2717c6b5207b7ad8c3ffbd9db16397e}
-
-\begin{DoxyCompactList}\small\item\em The Lotka-\/\+Volterra equations. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a89d93c20731e6c448cd62bfda374e6cd}{}double $\ast$ \hyperlink{eoms_8h_a89d93c20731e6c448cd62bfda374e6cd}{parrot} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_a89d93c20731e6c448cd62bfda374e6cd}
-
-\begin{DoxyCompactList}\small\item\em The parrot system. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a76ef867412e83d8146b170b07b57c7cd}{}double $\ast$ \hyperlink{eoms_8h_a76ef867412e83d8146b170b07b57c7cd}{rossler} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_a76ef867412e83d8146b170b07b57c7cd}
-
-\begin{DoxyCompactList}\small\item\em The Rossler system (Borelli \& Coleman 1987) \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a8782b145d9cd8fac40cb7e437b5d2330}{}double $\ast$ \hyperlink{eoms_8h_a8782b145d9cd8fac40cb7e437b5d2330}{symmetric\+\_\+top} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_a8782b145d9cd8fac40cb7e437b5d2330}
-
-\begin{DoxyCompactList}\small\item\em The symmetric top. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_a8c0c41ed9dbd072d82e62f76b84e48d7}{}double $\ast$ \hyperlink{eoms_8h_a8c0c41ed9dbd072d82e62f76b84e48d7}{vanderpol} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_a8c0c41ed9dbd072d82e62f76b84e48d7}
-
-\begin{DoxyCompactList}\small\item\em The van der Pol oscillator. \end{DoxyCompactList}\item 
-\hypertarget{eoms_8h_afd1f9893aecc994e60a2b52a7b8af7e0}{}double $\ast$ \hyperlink{eoms_8h_afd1f9893aecc994e60a2b52a7b8af7e0}{vanderpol2d} (double, double\mbox{[}$\,$\mbox{]})\label{eoms_8h_afd1f9893aecc994e60a2b52a7b8af7e0}
-
-\begin{DoxyCompactList}\small\item\em The 2-\/\+D van der Pol oscillator. \end{DoxyCompactList}\end{DoxyCompactItemize}
+double $\ast$ \hyperlink{eoms_8h_aa7e56647473fda6713f2859204825fa9}{brusselator} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_aa35dd3618c4aea400807300f6f527215}{chen} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_a11e6e9f88db3a9e534b7e08afdca9dae}{damped\+\_\+spring} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_aef740a9635dace724ad6e69dde2b404a}{double\+\_\+pendulum} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_a6b2d0a6fc0ea58412e5d3cfa962bc6bb}{duffing} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_ac64c39c0ef127e0c41dc58fc6a5c7466}{lorenz} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_ac2717c6b5207b7ad8c3ffbd9db16397e}{lotka} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_a89d93c20731e6c448cd62bfda374e6cd}{parrot} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_a76ef867412e83d8146b170b07b57c7cd}{rossler} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_a8782b145d9cd8fac40cb7e437b5d2330}{symmetric\+\_\+top} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_a8c0c41ed9dbd072d82e62f76b84e48d7}{vanderpol} (double, double\mbox{[}$\,$\mbox{]})
+\item 
+double $\ast$ \hyperlink{eoms_8h_afd1f9893aecc994e60a2b52a7b8af7e0}{vanderpol2d} (double, double\mbox{[}$\,$\mbox{]})
+\end{DoxyCompactItemize}
 \subsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
@@ -61,6 +47,114 @@ struct \hyperlink{structfunction__table}{function\+\_\+table}
 char $\ast$ \hyperlink{eoms_8h_aafafec6952f2b7d4d2946ffe6b3e6062}{system\+\_\+list}
 \end{DoxyCompactItemize}
 
+
+\subsection{Typedef Documentation}
+\hypertarget{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}{}\index{eoms.\+h@{eoms.\+h}!func\+\_\+ptr@{func\+\_\+ptr}}
+\index{func\+\_\+ptr@{func\+\_\+ptr}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{func\+\_\+ptr}]{\setlength{\rightskip}{0pt plus 5cm}typedef double$\ast$($\ast$  func\+\_\+ptr) (double, double\mbox{[}$\,$\mbox{]})}\label{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}
+Pointer type for O\+D\+E functions \hypertarget{eoms_8h_a0be2960cb454fad0133ab991dcb4f99d}{}\index{eoms.\+h@{eoms.\+h}!function\+\_\+table@{function\+\_\+table}}
+\index{function\+\_\+table@{function\+\_\+table}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{function\+\_\+table}]{\setlength{\rightskip}{0pt plus 5cm}typedef struct {\bf function\+\_\+table}  {\bf function\+\_\+table}}\label{eoms_8h_a0be2960cb454fad0133ab991dcb4f99d}
+Stores system properties for easy access 
+
+\subsection{Function Documentation}
+\hypertarget{eoms_8h_aa7e56647473fda6713f2859204825fa9}{}\index{eoms.\+h@{eoms.\+h}!brusselator@{brusselator}}
+\index{brusselator@{brusselator}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{brusselator}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ brusselator (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_aa7e56647473fda6713f2859204825fa9}
+The Brusselator \hypertarget{eoms_8h_aa35dd3618c4aea400807300f6f527215}{}\index{eoms.\+h@{eoms.\+h}!chen@{chen}}
+\index{chen@{chen}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{chen}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ chen (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_aa35dd3618c4aea400807300f6f527215}
+The Chen system \hypertarget{eoms_8h_a11e6e9f88db3a9e534b7e08afdca9dae}{}\index{eoms.\+h@{eoms.\+h}!damped\+\_\+spring@{damped\+\_\+spring}}
+\index{damped\+\_\+spring@{damped\+\_\+spring}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{damped\+\_\+spring}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ damped\+\_\+spring (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_a11e6e9f88db3a9e534b7e08afdca9dae}
+The damped spring \hypertarget{eoms_8h_aef740a9635dace724ad6e69dde2b404a}{}\index{eoms.\+h@{eoms.\+h}!double\+\_\+pendulum@{double\+\_\+pendulum}}
+\index{double\+\_\+pendulum@{double\+\_\+pendulum}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{double\+\_\+pendulum}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ double\+\_\+pendulum (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_aef740a9635dace724ad6e69dde2b404a}
+The double pendulum \hypertarget{eoms_8h_a6b2d0a6fc0ea58412e5d3cfa962bc6bb}{}\index{eoms.\+h@{eoms.\+h}!duffing@{duffing}}
+\index{duffing@{duffing}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{duffing}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ duffing (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_a6b2d0a6fc0ea58412e5d3cfa962bc6bb}
+The Duffing equation \hypertarget{eoms_8h_ac64c39c0ef127e0c41dc58fc6a5c7466}{}\index{eoms.\+h@{eoms.\+h}!lorenz@{lorenz}}
+\index{lorenz@{lorenz}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{lorenz}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ lorenz (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_ac64c39c0ef127e0c41dc58fc6a5c7466}
+The Lorenz system \hypertarget{eoms_8h_ac2717c6b5207b7ad8c3ffbd9db16397e}{}\index{eoms.\+h@{eoms.\+h}!lotka@{lotka}}
+\index{lotka@{lotka}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{lotka}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ lotka (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_ac2717c6b5207b7ad8c3ffbd9db16397e}
+The Lotka-\/\+Volterra equations \hypertarget{eoms_8h_a89d93c20731e6c448cd62bfda374e6cd}{}\index{eoms.\+h@{eoms.\+h}!parrot@{parrot}}
+\index{parrot@{parrot}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{parrot}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ parrot (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_a89d93c20731e6c448cd62bfda374e6cd}
+The parrot system \hypertarget{eoms_8h_a76ef867412e83d8146b170b07b57c7cd}{}\index{eoms.\+h@{eoms.\+h}!rossler@{rossler}}
+\index{rossler@{rossler}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{rossler}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ rossler (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_a76ef867412e83d8146b170b07b57c7cd}
+The Rossler system (Borelli \& Coleman 1987) \hypertarget{eoms_8h_a8782b145d9cd8fac40cb7e437b5d2330}{}\index{eoms.\+h@{eoms.\+h}!symmetric\+\_\+top@{symmetric\+\_\+top}}
+\index{symmetric\+\_\+top@{symmetric\+\_\+top}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{symmetric\+\_\+top}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ symmetric\+\_\+top (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_a8782b145d9cd8fac40cb7e437b5d2330}
+The symmetric top \hypertarget{eoms_8h_a8c0c41ed9dbd072d82e62f76b84e48d7}{}\index{eoms.\+h@{eoms.\+h}!vanderpol@{vanderpol}}
+\index{vanderpol@{vanderpol}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{vanderpol}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ vanderpol (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_a8c0c41ed9dbd072d82e62f76b84e48d7}
+The van der Pol oscillator \hypertarget{eoms_8h_afd1f9893aecc994e60a2b52a7b8af7e0}{}\index{eoms.\+h@{eoms.\+h}!vanderpol2d@{vanderpol2d}}
+\index{vanderpol2d@{vanderpol2d}!eoms.\+h@{eoms.\+h}}
+\subsubsection[{vanderpol2d}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ vanderpol2d (
+\begin{DoxyParamCaption}
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}}
+\end{DoxyParamCaption}
+)}\label{eoms_8h_afd1f9893aecc994e60a2b52a7b8af7e0}
+The 2-\/\+D van der Pol oscillator 
 
 \subsection{Variable Documentation}
 \hypertarget{eoms_8h_a43aed68980d9760a9d0fc16ac2228404}{}\index{eoms.\+h@{eoms.\+h}!func\+\_\+table@{func\+\_\+table}}
