--- a/latex/integrate_8h.tex
+++ b/latex/integrate_8h.tex
@@ -3,12 +3,34 @@
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{integrate_8h_ae5ad5cbeccaedc03a48d3c7eaa803e79}{}void \hyperlink{integrate_8h_ae5ad5cbeccaedc03a48d3c7eaa803e79}{print\+\_\+usage} ()\label{integrate_8h_ae5ad5cbeccaedc03a48d3c7eaa803e79}
+void \hyperlink{integrate_8h_ae5ad5cbeccaedc03a48d3c7eaa803e79}{print\+\_\+usage} ()
+\item 
+\hyperlink{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}{func\+\_\+ptr} \hyperlink{integrate_8h_a137795dd769a201a321e9bda5e5d4486}{lookup\+\_\+\+F} (char $\ast$name)
+\item 
+int \hyperlink{integrate_8h_aa7ec5d7c957338e49513fc9a13e41652}{lookup\+\_\+n\+\_\+vars} (char $\ast$name)
+\end{DoxyCompactItemize}
 
-\begin{DoxyCompactList}\small\item\em Prints program usage. \end{DoxyCompactList}\item 
-\hypertarget{integrate_8h_a137795dd769a201a321e9bda5e5d4486}{}\hyperlink{eoms_8h_ad41a7f3074b4b25351cbe9978efa090a}{func\+\_\+ptr} \hyperlink{integrate_8h_a137795dd769a201a321e9bda5e5d4486}{lookup\+\_\+\+F} (char $\ast$name)\label{integrate_8h_a137795dd769a201a321e9bda5e5d4486}
 
-\begin{DoxyCompactList}\small\item\em Retrieves function pointer given system name. \end{DoxyCompactList}\item 
-\hypertarget{integrate_8h_aa7ec5d7c957338e49513fc9a13e41652}{}int \hyperlink{integrate_8h_aa7ec5d7c957338e49513fc9a13e41652}{lookup\+\_\+n\+\_\+vars} (char $\ast$name)\label{integrate_8h_aa7ec5d7c957338e49513fc9a13e41652}
-
-\begin{DoxyCompactList}\small\item\em Retrieves dimensions given system name. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection{Function Documentation}
+\hypertarget{integrate_8h_a137795dd769a201a321e9bda5e5d4486}{}\index{integrate.\+h@{integrate.\+h}!lookup\+\_\+\+F@{lookup\+\_\+\+F}}
+\index{lookup\+\_\+\+F@{lookup\+\_\+\+F}!integrate.\+h@{integrate.\+h}}
+\subsubsection[{lookup\+\_\+\+F}]{\setlength{\rightskip}{0pt plus 5cm}{\bf func\+\_\+ptr} lookup\+\_\+\+F (
+\begin{DoxyParamCaption}
+\item[{char $\ast$}]{name}
+\end{DoxyParamCaption}
+)}\label{integrate_8h_a137795dd769a201a321e9bda5e5d4486}
+Retrieves function pointer given system name \hypertarget{integrate_8h_aa7ec5d7c957338e49513fc9a13e41652}{}\index{integrate.\+h@{integrate.\+h}!lookup\+\_\+n\+\_\+vars@{lookup\+\_\+n\+\_\+vars}}
+\index{lookup\+\_\+n\+\_\+vars@{lookup\+\_\+n\+\_\+vars}!integrate.\+h@{integrate.\+h}}
+\subsubsection[{lookup\+\_\+n\+\_\+vars}]{\setlength{\rightskip}{0pt plus 5cm}int lookup\+\_\+n\+\_\+vars (
+\begin{DoxyParamCaption}
+\item[{char $\ast$}]{name}
+\end{DoxyParamCaption}
+)}\label{integrate_8h_aa7ec5d7c957338e49513fc9a13e41652}
+Retrieves dimensions given system name \hypertarget{integrate_8h_ae5ad5cbeccaedc03a48d3c7eaa803e79}{}\index{integrate.\+h@{integrate.\+h}!print\+\_\+usage@{print\+\_\+usage}}
+\index{print\+\_\+usage@{print\+\_\+usage}!integrate.\+h@{integrate.\+h}}
+\subsubsection[{print\+\_\+usage}]{\setlength{\rightskip}{0pt plus 5cm}void print\+\_\+usage (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}\label{integrate_8h_ae5ad5cbeccaedc03a48d3c7eaa803e79}
+Prints program usage 
