--- a/latex/structfunction__table.tex
+++ b/latex/structfunction__table.tex
@@ -2,11 +2,6 @@
 \label{structfunction__table}\index{function\+\_\+table@{function\+\_\+table}}
 
 
-Stores system properties for easy access.  
-
-
-
-
 {\ttfamily \#include $<$eoms.\+h$>$}
 
 \subsection*{Public Attributes}
@@ -21,7 +16,7 @@ int \hyperlink{structfunction__table_ae4e3f9023fbce759fc423e921e51d43f}{n\+\_\+v
 
 
 \subsection{Detailed Description}
-Stores system properties for easy access. 
+Stores system properties for easy access 
 
 \subsection{Member Data Documentation}
 \hypertarget{structfunction__table_a9788c2e52edde5a8e37d1e7b4ea6b234}{}\index{function\+\_\+table@{function\+\_\+table}!F@{F}}
