--- a/latex/fweuler_8h.tex
+++ b/latex/fweuler_8h.tex
@@ -4,28 +4,75 @@
 \begin{DoxyCompactItemize}
 \item 
 struct \hyperlink{structfweuler}{fweuler}
-\begin{DoxyCompactList}\small\item\em A forward-\/\+Euler integrator. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \subsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{fweuler_8h_ad1ee7fc91b9a50f96607f03dd0291732}{}typedef struct \hyperlink{structfweuler}{fweuler} \hyperlink{fweuler_8h_ad1ee7fc91b9a50f96607f03dd0291732}{fweuler}\label{fweuler_8h_ad1ee7fc91b9a50f96607f03dd0291732}
-
-\begin{DoxyCompactList}\small\item\em A forward-\/\+Euler integrator. \end{DoxyCompactList}\end{DoxyCompactItemize}
+typedef struct \hyperlink{structfweuler}{fweuler} \hyperlink{fweuler_8h_ad1ee7fc91b9a50f96607f03dd0291732}{fweuler}
+\end{DoxyCompactItemize}
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{fweuler_8h_add39424dfff0911ec3b1ea7b8a543fd5}{}\hyperlink{structfweuler}{fweuler} $\ast$ \hyperlink{fweuler_8h_add39424dfff0911ec3b1ea7b8a543fd5}{fweuler\+\_\+new} (int, double, double, double\mbox{[}$\,$\mbox{]}, double $\ast$($\ast$)(double, double\mbox{[}$\,$\mbox{]}), int, int, F\+I\+L\+E $\ast$)\label{fweuler_8h_add39424dfff0911ec3b1ea7b8a543fd5}
+\hyperlink{structfweuler}{fweuler} $\ast$ \hyperlink{fweuler_8h_add39424dfff0911ec3b1ea7b8a543fd5}{fweuler\+\_\+new} (int, double, double, double\mbox{[}$\,$\mbox{]}, double $\ast$($\ast$)(double, double\mbox{[}$\,$\mbox{]}), int, int, F\+I\+L\+E $\ast$)
+\item 
+void \hyperlink{fweuler_8h_a86fd9e3d73d3977d19ba618166668c03}{fweuler\+\_\+print\+\_\+state} (\hyperlink{structfweuler}{fweuler} $\ast$)
+\item 
+void \hyperlink{fweuler_8h_a3e1aad0b75fef72ccd8f8d804cb622ef}{fweuler\+\_\+write\+\_\+state} (\hyperlink{structfweuler}{fweuler} $\ast$)
+\item 
+void \hyperlink{fweuler_8h_a0db8ef2fa3df4bf41f54579b7d8dae48}{fweuler\+\_\+step} (\hyperlink{structfweuler}{fweuler} $\ast$)
+\item 
+void \hyperlink{fweuler_8h_a7445a9cd72aae877144675caab783d0a}{fweuler\+\_\+integrate} (\hyperlink{structfweuler}{fweuler} $\ast$, int)
+\end{DoxyCompactItemize}
 
-\begin{DoxyCompactList}\small\item\em \char`\"{}\+Constructor\char`\"{} for forward-\/\+Euler integrator \end{DoxyCompactList}\item 
-\hypertarget{fweuler_8h_a86fd9e3d73d3977d19ba618166668c03}{}void \hyperlink{fweuler_8h_a86fd9e3d73d3977d19ba618166668c03}{fweuler\+\_\+print\+\_\+state} (\hyperlink{structfweuler}{fweuler} $\ast$)\label{fweuler_8h_a86fd9e3d73d3977d19ba618166668c03}
 
-\begin{DoxyCompactList}\small\item\em Prints state at time t. \end{DoxyCompactList}\item 
-\hypertarget{fweuler_8h_a3e1aad0b75fef72ccd8f8d804cb622ef}{}void \hyperlink{fweuler_8h_a3e1aad0b75fef72ccd8f8d804cb622ef}{fweuler\+\_\+write\+\_\+state} (\hyperlink{structfweuler}{fweuler} $\ast$)\label{fweuler_8h_a3e1aad0b75fef72ccd8f8d804cb622ef}
+\subsection{Typedef Documentation}
+\hypertarget{fweuler_8h_ad1ee7fc91b9a50f96607f03dd0291732}{}\index{fweuler.\+h@{fweuler.\+h}!fweuler@{fweuler}}
+\index{fweuler@{fweuler}!fweuler.\+h@{fweuler.\+h}}
+\subsubsection[{fweuler}]{\setlength{\rightskip}{0pt plus 5cm}typedef struct {\bf fweuler}  {\bf fweuler}}\label{fweuler_8h_ad1ee7fc91b9a50f96607f03dd0291732}
+A forward-\/\+Euler integrator. Simple but inaccurate. 
 
-\begin{DoxyCompactList}\small\item\em Writes state at time t to file. \end{DoxyCompactList}\item 
-\hypertarget{fweuler_8h_a0db8ef2fa3df4bf41f54579b7d8dae48}{}void \hyperlink{fweuler_8h_a0db8ef2fa3df4bf41f54579b7d8dae48}{fweuler\+\_\+step} (\hyperlink{structfweuler}{fweuler} $\ast$)\label{fweuler_8h_a0db8ef2fa3df4bf41f54579b7d8dae48}
-
-\begin{DoxyCompactList}\small\item\em Integrates system over one timestep. \end{DoxyCompactList}\item 
-\hypertarget{fweuler_8h_a7445a9cd72aae877144675caab783d0a}{}void \hyperlink{fweuler_8h_a7445a9cd72aae877144675caab783d0a}{fweuler\+\_\+integrate} (\hyperlink{structfweuler}{fweuler} $\ast$, int)\label{fweuler_8h_a7445a9cd72aae877144675caab783d0a}
-
-\begin{DoxyCompactList}\small\item\em Integrates system over multiple timesteps. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection{Function Documentation}
+\hypertarget{fweuler_8h_a7445a9cd72aae877144675caab783d0a}{}\index{fweuler.\+h@{fweuler.\+h}!fweuler\+\_\+integrate@{fweuler\+\_\+integrate}}
+\index{fweuler\+\_\+integrate@{fweuler\+\_\+integrate}!fweuler.\+h@{fweuler.\+h}}
+\subsubsection[{fweuler\+\_\+integrate}]{\setlength{\rightskip}{0pt plus 5cm}void fweuler\+\_\+integrate (
+\begin{DoxyParamCaption}
+\item[{{\bf fweuler} $\ast$}]{, }
+\item[{int}]{}
+\end{DoxyParamCaption}
+)}\label{fweuler_8h_a7445a9cd72aae877144675caab783d0a}
+Integrates system over multiple timesteps \hypertarget{fweuler_8h_add39424dfff0911ec3b1ea7b8a543fd5}{}\index{fweuler.\+h@{fweuler.\+h}!fweuler\+\_\+new@{fweuler\+\_\+new}}
+\index{fweuler\+\_\+new@{fweuler\+\_\+new}!fweuler.\+h@{fweuler.\+h}}
+\subsubsection[{fweuler\+\_\+new}]{\setlength{\rightskip}{0pt plus 5cm}{\bf fweuler}$\ast$ fweuler\+\_\+new (
+\begin{DoxyParamCaption}
+\item[{int}]{, }
+\item[{double}]{, }
+\item[{double}]{, }
+\item[{double}]{\mbox{[}$\,$\mbox{]}, }
+\item[{double $\ast$}]{$\ast$)(double, double\mbox{[}$\,$\mbox{]}, }
+\item[{int}]{, }
+\item[{int}]{, }
+\item[{F\+I\+L\+E $\ast$}]{}
+\end{DoxyParamCaption}
+)}\label{fweuler_8h_add39424dfff0911ec3b1ea7b8a543fd5}
+Initializes a forward-\/\+Euler integrator \hypertarget{fweuler_8h_a86fd9e3d73d3977d19ba618166668c03}{}\index{fweuler.\+h@{fweuler.\+h}!fweuler\+\_\+print\+\_\+state@{fweuler\+\_\+print\+\_\+state}}
+\index{fweuler\+\_\+print\+\_\+state@{fweuler\+\_\+print\+\_\+state}!fweuler.\+h@{fweuler.\+h}}
+\subsubsection[{fweuler\+\_\+print\+\_\+state}]{\setlength{\rightskip}{0pt plus 5cm}void fweuler\+\_\+print\+\_\+state (
+\begin{DoxyParamCaption}
+\item[{{\bf fweuler} $\ast$}]{}
+\end{DoxyParamCaption}
+)}\label{fweuler_8h_a86fd9e3d73d3977d19ba618166668c03}
+Prints state at time t \hypertarget{fweuler_8h_a0db8ef2fa3df4bf41f54579b7d8dae48}{}\index{fweuler.\+h@{fweuler.\+h}!fweuler\+\_\+step@{fweuler\+\_\+step}}
+\index{fweuler\+\_\+step@{fweuler\+\_\+step}!fweuler.\+h@{fweuler.\+h}}
+\subsubsection[{fweuler\+\_\+step}]{\setlength{\rightskip}{0pt plus 5cm}void fweuler\+\_\+step (
+\begin{DoxyParamCaption}
+\item[{{\bf fweuler} $\ast$}]{}
+\end{DoxyParamCaption}
+)}\label{fweuler_8h_a0db8ef2fa3df4bf41f54579b7d8dae48}
+Integrates system over one timestep \hypertarget{fweuler_8h_a3e1aad0b75fef72ccd8f8d804cb622ef}{}\index{fweuler.\+h@{fweuler.\+h}!fweuler\+\_\+write\+\_\+state@{fweuler\+\_\+write\+\_\+state}}
+\index{fweuler\+\_\+write\+\_\+state@{fweuler\+\_\+write\+\_\+state}!fweuler.\+h@{fweuler.\+h}}
+\subsubsection[{fweuler\+\_\+write\+\_\+state}]{\setlength{\rightskip}{0pt plus 5cm}void fweuler\+\_\+write\+\_\+state (
+\begin{DoxyParamCaption}
+\item[{{\bf fweuler} $\ast$}]{}
+\end{DoxyParamCaption}
+)}\label{fweuler_8h_a3e1aad0b75fef72ccd8f8d804cb622ef}
+Writes state at time t to file 
