--- a/latex/structbulsto.tex
+++ b/latex/structbulsto.tex
@@ -2,68 +2,96 @@
 \label{structbulsto}\index{bulsto@{bulsto}}
 
 
-A Bulirsch-\/\+Stoer integrator.  
-
-
-
-
 {\ttfamily \#include $<$bulsto.\+h$>$}
 
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{structbulsto_a4644ac965956cf8a34a102aa42882fa9}{}int \hyperlink{structbulsto_a4644ac965956cf8a34a102aa42882fa9}{n\+\_\+vars}\label{structbulsto_a4644ac965956cf8a34a102aa42882fa9}
+\hypertarget{structbulsto_a4644ac965956cf8a34a102aa42882fa9}{}int {\bfseries n\+\_\+vars}\label{structbulsto_a4644ac965956cf8a34a102aa42882fa9}
 
-\begin{DoxyCompactList}\small\item\em Number of spatial variables. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a36056008e687384ae776b011c92a8536}{}double \hyperlink{structbulsto_a36056008e687384ae776b011c92a8536}{dt}\label{structbulsto_a36056008e687384ae776b011c92a8536}
-
-\begin{DoxyCompactList}\small\item\em Length of timestep. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a3553c5b225bd39d4f8e797ea958f8b3b}{}double \hyperlink{structbulsto_a3553c5b225bd39d4f8e797ea958f8b3b}{t}\label{structbulsto_a3553c5b225bd39d4f8e797ea958f8b3b}
-
-\begin{DoxyCompactList}\small\item\em Elapsed time. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a110de2f76d66addd0c11b3c1cf896557}{}double $\ast$ \hyperlink{structbulsto_a110de2f76d66addd0c11b3c1cf896557}{X}\label{structbulsto_a110de2f76d66addd0c11b3c1cf896557}
-
-\begin{DoxyCompactList}\small\item\em Current state (at time t) \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a8b6f5733863e9f0ce2179bc45a58902b}{}double $\ast$($\ast$ \hyperlink{structbulsto_a8b6f5733863e9f0ce2179bc45a58902b}{F} )(double, double\mbox{[}$\,$\mbox{]})\label{structbulsto_a8b6f5733863e9f0ce2179bc45a58902b}
-
-\begin{DoxyCompactList}\small\item\em O\+D\+E vector function. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a88b2a30854139fc04fd3763f78c1d97d}{}double \hyperlink{structbulsto_a88b2a30854139fc04fd3763f78c1d97d}{delta}\label{structbulsto_a88b2a30854139fc04fd3763f78c1d97d}
-
-\begin{DoxyCompactList}\small\item\em Target accuracy. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a21e52ecfd0e77ee341ec29e73e871be7}{}int \hyperlink{structbulsto_a21e52ecfd0e77ee341ec29e73e871be7}{verbose}\label{structbulsto_a21e52ecfd0e77ee341ec29e73e871be7}
-
-\begin{DoxyCompactList}\small\item\em Verbose flag. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a79adff2fa017d5b62e46beebf5af387f}{}int \hyperlink{structbulsto_a79adff2fa017d5b62e46beebf5af387f}{write}\label{structbulsto_a79adff2fa017d5b62e46beebf5af387f}
-
-\begin{DoxyCompactList}\small\item\em Write flag. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a1bd09226c3efbaec4baa7915682b9c40}{}F\+I\+L\+E $\ast$ \hyperlink{structbulsto_a1bd09226c3efbaec4baa7915682b9c40}{poutfile}\label{structbulsto_a1bd09226c3efbaec4baa7915682b9c40}
-
-\begin{DoxyCompactList}\small\item\em Output file pointer. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_ab0f98110059509f36682188917a94e82}{}int \hyperlink{structbulsto_ab0f98110059509f36682188917a94e82}{n\+\_\+steps}\label{structbulsto_ab0f98110059509f36682188917a94e82}
-
-\begin{DoxyCompactList}\small\item\em Number of steps so far. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a5b4eb1332886f1695feea32c643a9068}{}double $\ast$ \hyperlink{structbulsto_a5b4eb1332886f1695feea32c643a9068}{epsilon}\label{structbulsto_a5b4eb1332886f1695feea32c643a9068}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_ae042d246b8cc4fc2dca7eeb2b7de41a0}{}double $\ast$ \hyperlink{structbulsto_ae042d246b8cc4fc2dca7eeb2b7de41a0}{X1}\label{structbulsto_ae042d246b8cc4fc2dca7eeb2b7de41a0}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_a07d3f69a611b1f3d346615d8936672ce}{}double $\ast$ \hyperlink{structbulsto_a07d3f69a611b1f3d346615d8936672ce}{X2}\label{structbulsto_a07d3f69a611b1f3d346615d8936672ce}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_ad3ed4caf9c6fac621f0712b5162c0948}{}double $\ast$ \hyperlink{structbulsto_ad3ed4caf9c6fac621f0712b5162c0948}{X\+\_\+inc}\label{structbulsto_ad3ed4caf9c6fac621f0712b5162c0948}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_aa8ddc55838fa4eef090464cd6c523b1b}{}double \hyperlink{structbulsto_aa8ddc55838fa4eef090464cd6c523b1b}{t\+\_\+step}\label{structbulsto_aa8ddc55838fa4eef090464cd6c523b1b}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structbulsto_abda965d700144ad6697fb51a52c15d19}{}double $\ast$ \hyperlink{structbulsto_abda965d700144ad6697fb51a52c15d19}{X\+\_\+step}\label{structbulsto_abda965d700144ad6697fb51a52c15d19}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\item 
+double \hyperlink{structbulsto_a36056008e687384ae776b011c92a8536}{dt}
+\item 
+double \hyperlink{structbulsto_a3553c5b225bd39d4f8e797ea958f8b3b}{t}
+\item 
+double $\ast$ \hyperlink{structbulsto_a110de2f76d66addd0c11b3c1cf896557}{X}
+\item 
+double $\ast$($\ast$ \hyperlink{structbulsto_a8b6f5733863e9f0ce2179bc45a58902b}{F} )(double, double\mbox{[}$\,$\mbox{]})
+\item 
+double \hyperlink{structbulsto_a88b2a30854139fc04fd3763f78c1d97d}{delta}
+\item 
+int \hyperlink{structbulsto_a21e52ecfd0e77ee341ec29e73e871be7}{verbose}
+\item 
+int \hyperlink{structbulsto_a79adff2fa017d5b62e46beebf5af387f}{write}
+\item 
+F\+I\+L\+E $\ast$ \hyperlink{structbulsto_a1bd09226c3efbaec4baa7915682b9c40}{poutfile}
+\item 
+int \hyperlink{structbulsto_ab0f98110059509f36682188917a94e82}{n\+\_\+steps}
+\item 
+double $\ast$ \hyperlink{structbulsto_a5b4eb1332886f1695feea32c643a9068}{epsilon}
+\item 
+double $\ast$ \hyperlink{structbulsto_ae042d246b8cc4fc2dca7eeb2b7de41a0}{X1}
+\item 
+double $\ast$ \hyperlink{structbulsto_a07d3f69a611b1f3d346615d8936672ce}{X2}
+\item 
+double $\ast$ \hyperlink{structbulsto_ad3ed4caf9c6fac621f0712b5162c0948}{X\+\_\+inc}
+\item 
+double \hyperlink{structbulsto_aa8ddc55838fa4eef090464cd6c523b1b}{t\+\_\+step}
+\item 
+double $\ast$ \hyperlink{structbulsto_abda965d700144ad6697fb51a52c15d19}{X\+\_\+step}
+\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
-A Bulirsch-\/\+Stoer integrator. 
+A Bulirsch-\/\+Stoer integrator 
+
+\subsection{Member Data Documentation}
+\hypertarget{structbulsto_a88b2a30854139fc04fd3763f78c1d97d}{}\index{bulsto@{bulsto}!delta@{delta}}
+\index{delta@{delta}!bulsto@{bulsto}}
+\subsubsection[{delta}]{\setlength{\rightskip}{0pt plus 5cm}double bulsto\+::delta}\label{structbulsto_a88b2a30854139fc04fd3763f78c1d97d}
+O\+D\+E vector function \hypertarget{structbulsto_a36056008e687384ae776b011c92a8536}{}\index{bulsto@{bulsto}!dt@{dt}}
+\index{dt@{dt}!bulsto@{bulsto}}
+\subsubsection[{dt}]{\setlength{\rightskip}{0pt plus 5cm}double bulsto\+::dt}\label{structbulsto_a36056008e687384ae776b011c92a8536}
+Number of spatial variables \hypertarget{structbulsto_a5b4eb1332886f1695feea32c643a9068}{}\index{bulsto@{bulsto}!epsilon@{epsilon}}
+\index{epsilon@{epsilon}!bulsto@{bulsto}}
+\subsubsection[{epsilon}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ bulsto\+::epsilon}\label{structbulsto_a5b4eb1332886f1695feea32c643a9068}
+Number of steps so far \hypertarget{structbulsto_a8b6f5733863e9f0ce2179bc45a58902b}{}\index{bulsto@{bulsto}!F@{F}}
+\index{F@{F}!bulsto@{bulsto}}
+\subsubsection[{F}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$($\ast$ bulsto\+::\+F) (double, double\mbox{[}$\,$\mbox{]})}\label{structbulsto_a8b6f5733863e9f0ce2179bc45a58902b}
+Current state (at time t) \hypertarget{structbulsto_ab0f98110059509f36682188917a94e82}{}\index{bulsto@{bulsto}!n\+\_\+steps@{n\+\_\+steps}}
+\index{n\+\_\+steps@{n\+\_\+steps}!bulsto@{bulsto}}
+\subsubsection[{n\+\_\+steps}]{\setlength{\rightskip}{0pt plus 5cm}int bulsto\+::n\+\_\+steps}\label{structbulsto_ab0f98110059509f36682188917a94e82}
+Output file pointer \hypertarget{structbulsto_a1bd09226c3efbaec4baa7915682b9c40}{}\index{bulsto@{bulsto}!poutfile@{poutfile}}
+\index{poutfile@{poutfile}!bulsto@{bulsto}}
+\subsubsection[{poutfile}]{\setlength{\rightskip}{0pt plus 5cm}F\+I\+L\+E$\ast$ bulsto\+::poutfile}\label{structbulsto_a1bd09226c3efbaec4baa7915682b9c40}
+Write flag \hypertarget{structbulsto_a3553c5b225bd39d4f8e797ea958f8b3b}{}\index{bulsto@{bulsto}!t@{t}}
+\index{t@{t}!bulsto@{bulsto}}
+\subsubsection[{t}]{\setlength{\rightskip}{0pt plus 5cm}double bulsto\+::t}\label{structbulsto_a3553c5b225bd39d4f8e797ea958f8b3b}
+Length of timestep \hypertarget{structbulsto_aa8ddc55838fa4eef090464cd6c523b1b}{}\index{bulsto@{bulsto}!t\+\_\+step@{t\+\_\+step}}
+\index{t\+\_\+step@{t\+\_\+step}!bulsto@{bulsto}}
+\subsubsection[{t\+\_\+step}]{\setlength{\rightskip}{0pt plus 5cm}double bulsto\+::t\+\_\+step}\label{structbulsto_aa8ddc55838fa4eef090464cd6c523b1b}
+Array for storing intermediate data \hypertarget{structbulsto_a21e52ecfd0e77ee341ec29e73e871be7}{}\index{bulsto@{bulsto}!verbose@{verbose}}
+\index{verbose@{verbose}!bulsto@{bulsto}}
+\subsubsection[{verbose}]{\setlength{\rightskip}{0pt plus 5cm}int bulsto\+::verbose}\label{structbulsto_a21e52ecfd0e77ee341ec29e73e871be7}
+Target accuracy \hypertarget{structbulsto_a79adff2fa017d5b62e46beebf5af387f}{}\index{bulsto@{bulsto}!write@{write}}
+\index{write@{write}!bulsto@{bulsto}}
+\subsubsection[{write}]{\setlength{\rightskip}{0pt plus 5cm}int bulsto\+::write}\label{structbulsto_a79adff2fa017d5b62e46beebf5af387f}
+Verbose flag \hypertarget{structbulsto_a110de2f76d66addd0c11b3c1cf896557}{}\index{bulsto@{bulsto}!X@{X}}
+\index{X@{X}!bulsto@{bulsto}}
+\subsubsection[{X}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ bulsto\+::\+X}\label{structbulsto_a110de2f76d66addd0c11b3c1cf896557}
+Elapsed time \hypertarget{structbulsto_ae042d246b8cc4fc2dca7eeb2b7de41a0}{}\index{bulsto@{bulsto}!X1@{X1}}
+\index{X1@{X1}!bulsto@{bulsto}}
+\subsubsection[{X1}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ bulsto\+::\+X1}\label{structbulsto_ae042d246b8cc4fc2dca7eeb2b7de41a0}
+Array for storing intermediate data \hypertarget{structbulsto_a07d3f69a611b1f3d346615d8936672ce}{}\index{bulsto@{bulsto}!X2@{X2}}
+\index{X2@{X2}!bulsto@{bulsto}}
+\subsubsection[{X2}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ bulsto\+::\+X2}\label{structbulsto_a07d3f69a611b1f3d346615d8936672ce}
+Array for storing intermediate data \hypertarget{structbulsto_ad3ed4caf9c6fac621f0712b5162c0948}{}\index{bulsto@{bulsto}!X\+\_\+inc@{X\+\_\+inc}}
+\index{X\+\_\+inc@{X\+\_\+inc}!bulsto@{bulsto}}
+\subsubsection[{X\+\_\+inc}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ bulsto\+::\+X\+\_\+inc}\label{structbulsto_ad3ed4caf9c6fac621f0712b5162c0948}
+Array for storing intermediate data \hypertarget{structbulsto_abda965d700144ad6697fb51a52c15d19}{}\index{bulsto@{bulsto}!X\+\_\+step@{X\+\_\+step}}
+\index{X\+\_\+step@{X\+\_\+step}!bulsto@{bulsto}}
+\subsubsection[{X\+\_\+step}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ bulsto\+::\+X\+\_\+step}\label{structbulsto_abda965d700144ad6697fb51a52c15d19}
+Array for storing intermediate data 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
