--- a/latex/structfweuler.tex
+++ b/latex/structfweuler.tex
@@ -2,59 +2,81 @@
 \label{structfweuler}\index{fweuler@{fweuler}}
 
 
-A forward-\/\+Euler integrator.  
-
-
-
-
 {\ttfamily \#include $<$fweuler.\+h$>$}
 
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{structfweuler_a79f8c4cfdb9adfa253c8b4c037c237f8}{}int \hyperlink{structfweuler_a79f8c4cfdb9adfa253c8b4c037c237f8}{n\+\_\+vars}\label{structfweuler_a79f8c4cfdb9adfa253c8b4c037c237f8}
+\hypertarget{structfweuler_a79f8c4cfdb9adfa253c8b4c037c237f8}{}int {\bfseries n\+\_\+vars}\label{structfweuler_a79f8c4cfdb9adfa253c8b4c037c237f8}
 
-\begin{DoxyCompactList}\small\item\em Number of spatial variables. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_aaaa8f46ce07dde8c2f1d3fbb0097d166}{}double \hyperlink{structfweuler_aaaa8f46ce07dde8c2f1d3fbb0097d166}{dt}\label{structfweuler_aaaa8f46ce07dde8c2f1d3fbb0097d166}
-
-\begin{DoxyCompactList}\small\item\em Length of timestep. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_ab00dd0addf40e99c6abe9e65f5e140d5}{}double \hyperlink{structfweuler_ab00dd0addf40e99c6abe9e65f5e140d5}{t}\label{structfweuler_ab00dd0addf40e99c6abe9e65f5e140d5}
-
-\begin{DoxyCompactList}\small\item\em Elapsed time. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_ae6a7a8f3084e4a42a4c7da4c4a36dcc0}{}double $\ast$ \hyperlink{structfweuler_ae6a7a8f3084e4a42a4c7da4c4a36dcc0}{X}\label{structfweuler_ae6a7a8f3084e4a42a4c7da4c4a36dcc0}
-
-\begin{DoxyCompactList}\small\item\em Current state (at time t) \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_aa4e9973fa09e3f186f5bf3e0c7ae2c2e}{}double $\ast$($\ast$ \hyperlink{structfweuler_aa4e9973fa09e3f186f5bf3e0c7ae2c2e}{F} )(double, double\mbox{[}$\,$\mbox{]})\label{structfweuler_aa4e9973fa09e3f186f5bf3e0c7ae2c2e}
-
-\begin{DoxyCompactList}\small\item\em O\+D\+E vector function. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_a71969341520cf6b76abcc298471743da}{}int \hyperlink{structfweuler_a71969341520cf6b76abcc298471743da}{verbose}\label{structfweuler_a71969341520cf6b76abcc298471743da}
-
-\begin{DoxyCompactList}\small\item\em Verbose flag. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_a6f9c2735d7a016c50a343b17cde41d5d}{}int \hyperlink{structfweuler_a6f9c2735d7a016c50a343b17cde41d5d}{write}\label{structfweuler_a6f9c2735d7a016c50a343b17cde41d5d}
-
-\begin{DoxyCompactList}\small\item\em Write flag. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_ad2d6e50980d4a77a79652527c36d03ab}{}F\+I\+L\+E $\ast$ \hyperlink{structfweuler_ad2d6e50980d4a77a79652527c36d03ab}{poutfile}\label{structfweuler_ad2d6e50980d4a77a79652527c36d03ab}
-
-\begin{DoxyCompactList}\small\item\em Output file pointer. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_a3ed5377d7609cbeef32422ad5662ab62}{}int \hyperlink{structfweuler_a3ed5377d7609cbeef32422ad5662ab62}{n\+\_\+steps}\label{structfweuler_a3ed5377d7609cbeef32422ad5662ab62}
-
-\begin{DoxyCompactList}\small\item\em Number of steps so far. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_a24bbdf908ad0e3997194b2f9901a93e4}{}double \hyperlink{structfweuler_a24bbdf908ad0e3997194b2f9901a93e4}{t\+\_\+inc}\label{structfweuler_a24bbdf908ad0e3997194b2f9901a93e4}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_abb379c1efee260436de2484366a53c47}{}double $\ast$ \hyperlink{structfweuler_abb379c1efee260436de2484366a53c47}{X\+\_\+inc}\label{structfweuler_abb379c1efee260436de2484366a53c47}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_a34810f998eae03fbeaa53d37b73ec366}{}double \hyperlink{structfweuler_a34810f998eae03fbeaa53d37b73ec366}{t\+\_\+step}\label{structfweuler_a34810f998eae03fbeaa53d37b73ec366}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\item 
-\hypertarget{structfweuler_aceb1a0fdb7cb920512268ff3031b70dd}{}double $\ast$ \hyperlink{structfweuler_aceb1a0fdb7cb920512268ff3031b70dd}{X\+\_\+step}\label{structfweuler_aceb1a0fdb7cb920512268ff3031b70dd}
-
-\begin{DoxyCompactList}\small\item\em Array for storing intermediate data. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\item 
+double \hyperlink{structfweuler_aaaa8f46ce07dde8c2f1d3fbb0097d166}{dt}
+\item 
+double \hyperlink{structfweuler_ab00dd0addf40e99c6abe9e65f5e140d5}{t}
+\item 
+double $\ast$ \hyperlink{structfweuler_ae6a7a8f3084e4a42a4c7da4c4a36dcc0}{X}
+\item 
+double $\ast$($\ast$ \hyperlink{structfweuler_aa4e9973fa09e3f186f5bf3e0c7ae2c2e}{F} )(double, double\mbox{[}$\,$\mbox{]})
+\item 
+int \hyperlink{structfweuler_a71969341520cf6b76abcc298471743da}{verbose}
+\item 
+int \hyperlink{structfweuler_a6f9c2735d7a016c50a343b17cde41d5d}{write}
+\item 
+F\+I\+L\+E $\ast$ \hyperlink{structfweuler_ad2d6e50980d4a77a79652527c36d03ab}{poutfile}
+\item 
+int \hyperlink{structfweuler_a3ed5377d7609cbeef32422ad5662ab62}{n\+\_\+steps}
+\item 
+double \hyperlink{structfweuler_a24bbdf908ad0e3997194b2f9901a93e4}{t\+\_\+inc}
+\item 
+double $\ast$ \hyperlink{structfweuler_abb379c1efee260436de2484366a53c47}{X\+\_\+inc}
+\item 
+double \hyperlink{structfweuler_a34810f998eae03fbeaa53d37b73ec366}{t\+\_\+step}
+\item 
+double $\ast$ \hyperlink{structfweuler_aceb1a0fdb7cb920512268ff3031b70dd}{X\+\_\+step}
+\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
-A forward-\/\+Euler integrator. 
+A forward-\/\+Euler integrator. Simple but inaccurate. 
+
+\subsection{Member Data Documentation}
+\hypertarget{structfweuler_aaaa8f46ce07dde8c2f1d3fbb0097d166}{}\index{fweuler@{fweuler}!dt@{dt}}
+\index{dt@{dt}!fweuler@{fweuler}}
+\subsubsection[{dt}]{\setlength{\rightskip}{0pt plus 5cm}double fweuler\+::dt}\label{structfweuler_aaaa8f46ce07dde8c2f1d3fbb0097d166}
+Number of spatial variables \hypertarget{structfweuler_aa4e9973fa09e3f186f5bf3e0c7ae2c2e}{}\index{fweuler@{fweuler}!F@{F}}
+\index{F@{F}!fweuler@{fweuler}}
+\subsubsection[{F}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$($\ast$ fweuler\+::\+F) (double, double\mbox{[}$\,$\mbox{]})}\label{structfweuler_aa4e9973fa09e3f186f5bf3e0c7ae2c2e}
+Current state (at time t) \hypertarget{structfweuler_a3ed5377d7609cbeef32422ad5662ab62}{}\index{fweuler@{fweuler}!n\+\_\+steps@{n\+\_\+steps}}
+\index{n\+\_\+steps@{n\+\_\+steps}!fweuler@{fweuler}}
+\subsubsection[{n\+\_\+steps}]{\setlength{\rightskip}{0pt plus 5cm}int fweuler\+::n\+\_\+steps}\label{structfweuler_a3ed5377d7609cbeef32422ad5662ab62}
+Output file pointer \hypertarget{structfweuler_ad2d6e50980d4a77a79652527c36d03ab}{}\index{fweuler@{fweuler}!poutfile@{poutfile}}
+\index{poutfile@{poutfile}!fweuler@{fweuler}}
+\subsubsection[{poutfile}]{\setlength{\rightskip}{0pt plus 5cm}F\+I\+L\+E$\ast$ fweuler\+::poutfile}\label{structfweuler_ad2d6e50980d4a77a79652527c36d03ab}
+Write flag \hypertarget{structfweuler_ab00dd0addf40e99c6abe9e65f5e140d5}{}\index{fweuler@{fweuler}!t@{t}}
+\index{t@{t}!fweuler@{fweuler}}
+\subsubsection[{t}]{\setlength{\rightskip}{0pt plus 5cm}double fweuler\+::t}\label{structfweuler_ab00dd0addf40e99c6abe9e65f5e140d5}
+Length of timestep \hypertarget{structfweuler_a24bbdf908ad0e3997194b2f9901a93e4}{}\index{fweuler@{fweuler}!t\+\_\+inc@{t\+\_\+inc}}
+\index{t\+\_\+inc@{t\+\_\+inc}!fweuler@{fweuler}}
+\subsubsection[{t\+\_\+inc}]{\setlength{\rightskip}{0pt plus 5cm}double fweuler\+::t\+\_\+inc}\label{structfweuler_a24bbdf908ad0e3997194b2f9901a93e4}
+Number of steps so far \hypertarget{structfweuler_a34810f998eae03fbeaa53d37b73ec366}{}\index{fweuler@{fweuler}!t\+\_\+step@{t\+\_\+step}}
+\index{t\+\_\+step@{t\+\_\+step}!fweuler@{fweuler}}
+\subsubsection[{t\+\_\+step}]{\setlength{\rightskip}{0pt plus 5cm}double fweuler\+::t\+\_\+step}\label{structfweuler_a34810f998eae03fbeaa53d37b73ec366}
+Array for storing intermediate data \hypertarget{structfweuler_a71969341520cf6b76abcc298471743da}{}\index{fweuler@{fweuler}!verbose@{verbose}}
+\index{verbose@{verbose}!fweuler@{fweuler}}
+\subsubsection[{verbose}]{\setlength{\rightskip}{0pt plus 5cm}int fweuler\+::verbose}\label{structfweuler_a71969341520cf6b76abcc298471743da}
+O\+D\+E vector function \hypertarget{structfweuler_a6f9c2735d7a016c50a343b17cde41d5d}{}\index{fweuler@{fweuler}!write@{write}}
+\index{write@{write}!fweuler@{fweuler}}
+\subsubsection[{write}]{\setlength{\rightskip}{0pt plus 5cm}int fweuler\+::write}\label{structfweuler_a6f9c2735d7a016c50a343b17cde41d5d}
+Verbose flag \hypertarget{structfweuler_ae6a7a8f3084e4a42a4c7da4c4a36dcc0}{}\index{fweuler@{fweuler}!X@{X}}
+\index{X@{X}!fweuler@{fweuler}}
+\subsubsection[{X}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ fweuler\+::\+X}\label{structfweuler_ae6a7a8f3084e4a42a4c7da4c4a36dcc0}
+Elapsed time \hypertarget{structfweuler_abb379c1efee260436de2484366a53c47}{}\index{fweuler@{fweuler}!X\+\_\+inc@{X\+\_\+inc}}
+\index{X\+\_\+inc@{X\+\_\+inc}!fweuler@{fweuler}}
+\subsubsection[{X\+\_\+inc}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ fweuler\+::\+X\+\_\+inc}\label{structfweuler_abb379c1efee260436de2484366a53c47}
+Array for storing intermediate data \hypertarget{structfweuler_aceb1a0fdb7cb920512268ff3031b70dd}{}\index{fweuler@{fweuler}!X\+\_\+step@{X\+\_\+step}}
+\index{X\+\_\+step@{X\+\_\+step}!fweuler@{fweuler}}
+\subsubsection[{X\+\_\+step}]{\setlength{\rightskip}{0pt plus 5cm}double$\ast$ fweuler\+::\+X\+\_\+step}\label{structfweuler_aceb1a0fdb7cb920512268ff3031b70dd}
+Array for storing intermediate data 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
